--- a/index.html
+++ b/index.html
@@ -106,38 +106,101 @@
                         <!--------------------------------FIRST - BOX--------------------------------------->
                         <section class="top-news">
                             <div class="container">
-                                <div class="top-news-details" itemscope itemtype="https://schema.org/Thing">
-                                    <!-----------------TITLE--------------->
-                                    <h1 itemscope itemtype="https://schema.org/CreativeWork">
-                                        <a itemprop="url" title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
-                                        +جزئیات" href="./news.html">یارانه جدید 120 هزار تومانی به چه کسانی تعلق می
-                                            گیرد؟
-                                            +جزئیات</a>
-                                    </h1>
-                                    <!-----------------LEAD--------------->
-                                    <p itemprop="description">
-                                        در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای اقشار ضعیف
-                                        جامعه یارانه جدیدی را در نظر گرفته اند. </p>
-                                </div>
-                                <div class="top-news-image" itemscope itemtype="https://schema.org/ImageObject">
                                     <ul id="lightSlider">
                                         <li>
+                                            <div class="top-news-details" itemscope itemtype="https://schema.org/Thing">
+                                                <!-----------------TITLE--------------->
+                                                <h1 itemscope itemtype="https://schema.org/CreativeWork">
+                                                    <a itemprop="url" title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
+                                                    +جزئیات" href="./news.html">یارانه جدید 120 هزار تومانی به چه کسانی
+                                                        تعلق می
+                                                        گیرد؟
+                                                        +جزئیات</a>
+                                                </h1>
+                                                <!-----------------LEAD--------------->
+                                                <p itemprop="description">
+                                                    در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
+                                                    اقشار ضعیف
+                                                    جامعه یارانه جدیدی را در نظر گرفته اند. </p>
+                                            </div>
                                             <img src="./images/آژانس.jpg" alt="">
                                         </li>
                                         <li>
+                                            <div class="top-news-details" itemscope itemtype="https://schema.org/Thing">
+                                                <!-----------------TITLE--------------->
+                                                <h1 itemscope itemtype="https://schema.org/CreativeWork">
+                                                    <a itemprop="url" title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
+                                                    +جزئیات" href="./news.html">یارانه جدید 120 هزار تومانی به چه کسانی
+                                                        تعلق می
+                                                        گیرد؟
+                                                        +جزئیات</a>
+                                                </h1>
+                                                <!-----------------LEAD--------------->
+                                                <p itemprop="description">
+                                                    در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
+                                                    اقشار ضعیف
+                                                    جامعه یارانه جدیدی را در نظر گرفته اند. </p>
+                                            </div>
                                             <img src="./images/آژانس.jpg" alt="">
                                         </li>
                                         <li>
+                                            <div class="top-news-details" itemscope itemtype="https://schema.org/Thing">
+                                                <!-----------------TITLE--------------->
+                                                <h1 itemscope itemtype="https://schema.org/CreativeWork">
+                                                    <a itemprop="url" title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
+                                                    +جزئیات" href="./news.html">یارانه جدید 120 هزار تومانی به چه کسانی
+                                                        تعلق می
+                                                        گیرد؟
+                                                        +جزئیات</a>
+                                                </h1>
+                                                <!-----------------LEAD--------------->
+                                                <p itemprop="description">
+                                                    در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
+                                                    اقشار ضعیف
+                                                    جامعه یارانه جدیدی را در نظر گرفته اند. </p>
+                                            </div>
                                             <img src="./images/آژانس.jpg" alt="">
                                         </li>
+
                                         <li>
+                                            <div class="top-news-details" itemscope itemtype="https://schema.org/Thing">
+                                                <!-----------------TITLE--------------->
+                                                <h1 itemscope itemtype="https://schema.org/CreativeWork">
+                                                    <a itemprop="url" title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
+                                                    +جزئیات" href="./news.html">یارانه جدید 120 هزار تومانی به چه کسانی
+                                                        تعلق می
+                                                        گیرد؟
+                                                        +جزئیات</a>
+                                                </h1>
+                                                <!-----------------LEAD--------------->
+                                                <p itemprop="description">
+                                                    در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
+                                                    اقشار ضعیف
+                                                    جامعه یارانه جدیدی را در نظر گرفته اند. </p>
+                                            </div>
                                             <img src="./images/آژانس.jpg" alt="">
                                         </li>
+
                                         <li>
+                                            <div class="top-news-details" itemscope itemtype="https://schema.org/Thing">
+                                                <!-----------------TITLE--------------->
+                                                <h1 itemscope itemtype="https://schema.org/CreativeWork">
+                                                    <a itemprop="url" title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
+                                                    +جزئیات" href="./news.html">یارانه جدید 120 هزار تومانی به چه کسانی
+                                                        تعلق می
+                                                        گیرد؟
+                                                        +جزئیات</a>
+                                                </h1>
+                                                <!-----------------LEAD--------------->
+                                                <p itemprop="description">
+                                                    در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای
+                                                    اقشار ضعیف
+                                                    جامعه یارانه جدیدی را در نظر گرفته اند. </p>
+                                            </div>
                                             <img src="./images/آژانس.jpg" alt="">
                                         </li>
+
                                     </ul>
-                                </div>
                             </div>
                         </section>
                         <!--------------------------------SECOND - BOX--------------------------------------->
@@ -725,8 +788,8 @@
                 <a href="#" title="آر اس اس"> <i class="fa fa-rss"></i></a>
             </div>
         </div>
-        <div class="creator" itemscope itemtype="https://schema.org/Thing">
-            <p itemprop="copyrightNotice">تمامی حقوق این سایت متعلق به پایگاه خبری تحلیلی مثلث میباشد و استفاده از مطالب
+        <div class="creator">
+            <p>تمامی حقوق این سایت متعلق به پایگاه خبری تحلیلی مثلث میباشد و استفاده از مطالب
                 آن با ذکر منبع بلامانع است
             </p>
         </div>
